# cad-graphics-engine-cpp

./: .gitignore  CMakeLists.txt  README.md  entrance.cpp
include/eigen-3.4.0/eigen-3.4.0/Eigen/src/Householder/: BlockHouseholder.h
include/eigen-3.4.0/eigen-3.4.0/Eigen/src/plugins/: IndexedViewMethods.h
include/pycad/: Configuration.h  Database.h  Structs.h  Utils.h
include/pycad/clip/: ClipStructs.h  Clipper.h  SutherlandHodgman.h  WeilerAtherton.h
include/pycad/filter/: Filter.h
include/pycad/interface/converters/configConverter/: ConfigConverter.h
include/pycad/interface/converters/coordConverter/: CoordConverter.h
include/pycad/interface/converters/databaseConverter/: DatabaseConverter.h
include/pycad/interface/converters/elementsConverter/: ArcInsConverter.h  BaseInsConverter.h  CircleInsConverter.h  EllipseInsConverter.h  PolylineInsConverter.h  SplineInsConverter.h
include/pycad/interface/converters/infoDictsConverter/: ArcInfoDictConverter.h  BaseFieldsInJsonInfoDictAndElementInsesConverter.h  CircleInfoDictConverter.h  EllipseInfoDictConverter.h  PolylineInfoDictConverter.h  SplineInfoDictConverter.h
include/pycad/parse/: BLock.h  Elements.h  ParseStructs.h  Tree.h
include/pycad/plot/: Painter.h
include/pycad/preprocess/: Preprocessor.h
include/pycad/sketcher/: AlignedDimensionSketcher.h  ArcSketcher.h  EllipseSketcher.h  PolylineSketcher.h  SplineSketcher.h
include/pycad/tools/: BLockTools.h  ElementTools.h  JsonTools.h  PainterTools.h  SketcherTools.h  TreeTools.h
pycad/: Configuration.cpp  Database.cpp  Utils.cpp
pycad/clip/: Clipper.cpp  SutherlandHodgman.cpp  WeilerAtherton.cpp
pycad/files/: feature.csv
pycad/filter/: Filter.cpp
pycad/interface/: Utils.py
pycad/interface/converters/configConverter/: ConfigConverter.cpp  Configuration.py
pycad/interface/converters/coordConverter/: CoordConverter.cpp
pycad/interface/converters/databaseConverter/: DatabaseConverter.cpp  Formalization.py
pycad/interface/converters/elementsConverter/: ArcInsConverter.cpp  BaseInsConverter.cpp  CircleInsConverter.cpp  EllipseInsConverter.cpp  PolylineInsConverter.cpp  SplineInsConverter.cpp
pycad/interface/converters/infoDictsConverter/: ArcInfoDictConverter.cpp  BaseFieldsInJsonInfoDictAndElementInsesConverter.cpp  CircleInfoDictConverter.cpp  EllipseInfoDictConverter.cpp  PolylineInfoDictConverter.cpp  SplineInfoDictConverter.cpp
pycad/interface/launchers/clipperLauncher/: Clipper.py  ClipperEntrance.cpp
pycad/interface/launchers/elementsLauncher/: Arc.py  ArcEntrance.cpp  Circle.py  CircleEntrance.cpp  Ellipse.py  EllipseEntrance.cpp  Polyline.py  PolylineEntrance.cpp  Spline.py  SplineEntrance.cpp
pycad/interface/launchers/filterLauncher/: Filter.py  FilterEntrance.cpp
pycad/interface/launchers/painterLauncher/: Painter.py  PainterEntrance.cpp  PainterFromPython.py  PainterToolsFromPython.py
pycad/interface/launchers/parserLauncher/: Parser.py  ParserEntrance.cpp
pycad/parse/: BLock.cpp  Elements.cpp  Tree.cpp
pycad/plot/: Painter.cpp
pycad/preprocess/: Preprocessor.cpp
pycad/sketcher/: AlignedDimensionSketcher.cpp  ArcSketcher.cpp  EllipseSketcher.cpp  PolylineSketcher.cpp  SplineSketcher.cpp
pycad/tools/: BLockTools.cpp  ElementTools.cpp  JsonTools.cpp  PainterTools.cpp  SketcherTools.cpp  TreeTools.cpp
yaml/: config.yaml
